[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/nklbdev.tile_palette/tile_palette.gd" type="Script" id=1]

[node name="TilePalette" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 128 )
rect_clip_content = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureListVBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 128.0
margin_bottom = 480.0

[node name="ScaleHSlider" type="HSlider" parent="HSplitContainer/TextureListVBoxContainer"]
margin_right = 128.0
margin_bottom = 16.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1

[node name="TextureItemList" type="ItemList" parent="HSplitContainer/TextureListVBoxContainer"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 480.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 3
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 256, 256 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureVBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 140.0
margin_right = 640.0
margin_bottom = 480.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TextureVBoxContainer"]
margin_right = 500.0
margin_bottom = 16.0
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TextureVBoxContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="ScaleHSlider" type="HSlider" parent="HSplitContainer/TextureVBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.01
step = 0.01
value = 0.01
exp_edit = true
allow_greater = true
allow_lesser = true

[node name="Panel" type="Panel" parent="HSplitContainer/TextureVBoxContainer"]
margin_top = 20.0
margin_right = 500.0
margin_bottom = 480.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScalingHelper" type="Control" parent="HSplitContainer/TextureVBoxContainer/Panel"]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="HSplitContainer/TextureVBoxContainer/Panel/ScalingHelper"]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionRect" type="ColorRect" parent="HSplitContainer/TextureVBoxContainer/Panel/ScalingHelper/Sprite"]
mouse_filter = 2
color = Color( 0.568627, 0.686275, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteBorder" type="ReferenceRect" parent="HSplitContainer/TextureVBoxContainer/Panel/ScalingHelper/Sprite"]
mouse_filter = 2
border_color = Color( 0.435294, 0.67451, 0.901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HSplitContainer/TextureListVBoxContainer/ScaleHSlider" to="." method="_on_TextureListScaleHSlider_value_changed"]
[connection signal="item_selected" from="HSplitContainer/TextureListVBoxContainer/TextureItemList" to="." method="_on_TextureItemList_item_selected"]
[connection signal="value_changed" from="HSplitContainer/TextureVBoxContainer/HBoxContainer/ScaleHSlider" to="." method="_on_TextureScaleHSlider_value_changed"]
[connection signal="gui_input" from="HSplitContainer/TextureVBoxContainer/Panel" to="." method="_on_Panel_gui_input"]
